# alpha-lines

./: .gitignore  pyproject.toml
alpha-lines/: _notes  _testing_games.txt  config.py  mcts_exp3.py  mcts_puct.py  modal_harness.py  model.py  ncu_compiled.py  ncu_profiling.py
bullshit/full-implementation-slop/: mcts.py  train.py  trainer.py
bullshit/full-implementation-slop/checkpoints/: elo_history.json
bullshit/optimized-game-claude-slop/: game.py  random_shit.py
bullshit/optimized-game-gemini-slop/: main.py
drawer_storage/: game_experimental.py  game_experimental_kernels.py  verify_game_implementation.py
main/: commands  config.py  game.py  game_kernels.py  model.py  ncu_eager.py  only_model_speedtest.py
notes/: commands
old_files/: _sample_game  base64_game_export.py  batched_lines_game.py  batched_mcts_test.py  claude_test_idk.py  exp3_mcts_non_batched.py  game-full.py  game_gemini.py  game_implementation_profiling_base.py  game_implementation_profiling_exp.py  game_torch.py  generate_uniform_games.py  gpu_profiling_access_test.py  kernel_profiling.py  lp-modal-overhead.py  main.py  mcts_puct_torch.py  mem_usage_slop.py  mock_model.py  move_count_test.py  nps_test.py  numba_thread_check.py  overfit_test.py  puct_mcts_non_batched  puct_vs_exp3.py  random_train.py  similarity_test_slop.py  speed-test-modal-cpu.py  speed-test-modal-gpu.py  speed_test_slop.py  test_utils.py  train_preset_test.py  train_random.py  train_random_harness_test.py  train_terminal_test.py  train_test.py
old_files/bullshit/full-implementation-slop/: config.py  elo.py  game.py  (+2 more)
(+3 files in other folders)
